tests/rosetta/out/Fortran/aks-test-for-primes.error
gfortran: exit status 1
/tmp/aks-test-for-primes.f90:76:5:

   76 |     p = 0
      |     1
Error: Symbol ‘p’ at (1) has no IMPLICIT type
/tmp/aks-test-for-primes.f90:82:12:

   82 |     first = .true.
      |            1
Warning: Extension: Conversion from LOGICAL(4) to INTEGER(4) at (1)
/tmp/aks-test-for-primes.f90:87:12:

   87 |         if (first) then
      |            1
Error: IF clause at (1) requires a scalar LOGICAL expression
/tmp/aks-test-for-primes.f90:89:18:

   89 |           line = (line + s5)
      |                  1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/aks-test-for-primes.f90:90:18:

   90 |           first = .false.
      |                  1
Warning: Extension: Conversion from LOGICAL(4) to INTEGER(4) at (1)
/tmp/aks-test-for-primes.f90:28:11:

   28 |       s = (s + s0)
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
